<resources>
    <string name="app_name">Caculator</string>
    <string name="from_xml">From Xml</string>
    <string name="from_code">From CODE</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="blink">Blink</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="rotate">Rotate</string>
    <string name="move">Move</string>
    <string name="slide_up">Slide Up</string>
    <string name="bounce">Bounce</string>
    <string name="combine">Combine</string>
    <string name="status_playing">Playing....</string>
    <string name="result">Result</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equal">+</string>
    <string name="modulo">%</string>
</resources>