<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtX"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <EditText
        android:id="@+id/txtY"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/result" />

    <!-- Cập nhật LinearLayout này để chứa 5 button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/plus"
            android:layout_height="match_parent"/>

        <!-- Thêm 4 button mới tại đây -->
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/divide"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btnModulo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/modulo"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>
